menssage error ATUALIZAÇÃO Vs 0.02

--- a/App/Views/common/header.phtml
+++ b/App/Views/common/header.phtml
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="shortcut icon" href="<?=assets()->img('favicon.ico');?>" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
         <link rel="stylesheet" href="<?= assets()->css('bootstrap.min.css'); ?>">
         <link rel="stylesheet" href="<?= assets()->css('main.css'); ?>">
