Function LISTA - Atualização Vs 0.04

--- a/App/Views/common/navbar.phtml
+++ b/App/Views/common/navbar.phtml
@@ -5,6 +5,7 @@
                     </div>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="<?= url()->route('menu.index');?>">Home</a></li>
+                        <li><a href="<?= url()->route('lista.index');?>">Lista</a></li>
                         <li><a href="<?= url()->route('cadastro.index');?>">Cadastrar Imóveis</a></li>
                         <li><a href="<?= url()->route('xml.index');?>">Importar XML</a></li>
                             
