--- a/App/Views/index/index.phtml
+++ b/App/Views/index/index.phtml
@@ -32,7 +32,7 @@
             <div class="col-sm-6 col-md-4">
 
                 <div class="thumbnail">
-                    <img src="../imagens/produtos/<?= $dados->id ?>/<?= $dados->imagem ?>" alt="..." width="90%"  style=" height: 300px;">
+                    <img src="../imagens/produtos/<?= $dados->id ?>/<?= $dados->imagem ?>" alt="<?= $dados->imagem ?>" width="90%"  style=" height: 300px;">
                     <div class="caption">
                         <h3>Titulo:<strong><?= $dados->titulo ?></strong></h3>
                         <address>
