correção RENDER('index.index') Vs 0.04

--- a/App/Views/index/index.phtml
+++ b/App/Views/index/index.phtml
@@ -53,8 +53,8 @@
                             <strong>Garagem: </strong><?= $dados->garagem ?><br>
                         </address>
 
-                        <p><a href="<?= url()->route('cadastro.editar', ['id' => $dados->id]); ?>" class="btn btn-primary" role="button">Editar</a> 
-                            <a href="<?= url()->route('cadastro.delete', ['id' => $dados->id]); ?>" class="btn btn-danger" role="button">Excluir</a></p>
+                        <!--<p><a href="<?= url()->route('cadastro.editar', ['id' => $dados->id]); ?>" class="btn btn-primary" role="button">Editar</a> 
+                            <a href="<?= url()->route('cadastro.delete', ['id' => $dados->id]); ?>" class="btn btn-danger" role="button">Excluir</a></p>-->
                     </div>
                 </div>
             </div><?php endforeach; ?>
