--- a/App/Views/cadastro/index.phtml
+++ b/App/Views/cadastro/index.phtml
@@ -67,7 +67,7 @@
             </div>
             <label for="complemente" class="col-sm-1 control-label">Complemento</label>
             <div class="col-sm-4">
-                <input type="text" value="" name="complemento" class="form-control" id="quantidade" placeholder="Complemento" required="required" maxlength="25" pattern="[A-Za-zã-ú\s]+$" title="Preencha o campo somente letras">
+                <input type="text" value="" name="complemento" class="form-control" id="quantidade" placeholder="Complemento" required="required" maxlength="25" pattern="[0-9A-Za-zã-ú\s]+$" title="Preencha o campo somente letras">
             </div>
         </div>    
         <div class="form-group">
